# casper7-plugin-wordle-reactions

./: pyproject.toml
casper7_plugin_wordle_ratings/: run.py
casper7_plugin_wordle_reactions/: run.py
