[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "casper7-plugin-wordle-ratings"
version = "0.0.0"
description = "Rates wordle results in a channel."
authors = ["backwardspy <backwardspy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "casper7_plugin_wordle_ratings"}]
repository = "https://github.com/backwardspy/casper7-plugin-wordle-ratings"

[tool.poetry.scripts]
casper7-plugin-wordle-ratings = "run:plugin"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.10"
docopt-ng = "^0.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.14.0"
mypy = "^0.960"
ward = "^0.66.0-beta.0"
ptpython = "^3.0.20"
isort = "^5.10.1"
